--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,23 @@
 name: widgets_flutter_and_material
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.2.0 <4.0.0'
+  sdk: ">=3.1.0 <4.0.0"
 
 dependencies:
+  cached_network_image: ^3.3.1
+  date_picker_timeline: ^1.2.6
+  datetime_picker_formfield_new: ^2.1.0
   flutter:
     sdk: flutter
+  qr_code_scanner: ^1.0.1
 
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
